# Raytracing

./: .gitignore  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.3608650  CMakeLists.txt.user.b84fb78  Camera.cpp  Camera.hpp  David_Kraus.md  Dielectric.cpp  Dielectric.h  DiffuseLight.cpp  DiffuseLight.h  Ena_Sefic.md  Engine.cpp  Engine.cpp.autosave  Engine.h  EngineProject.pro  Entity.cpp  Entity.h  FrameBuffer.cpp  FrameBuffer.h  HitRecord.cpp  HitRecord.h  Hittable.hpp  Hittable_List.cpp  Hittable_List.h  ImageRenderer.cpp  ImageRenderer.h  Interval.cpp  Interval.h  Lambertian.cpp  Lambertian.h  Log.cpp  Log.h  Makefile  Material.h  Materials.h  Metal.cpp  (+56 more)
.qtc_clangd/.cache/clangd/index/: gen.cpp.258D71474D604E17.idx  gen.h.D5AA90FFCB9235EE.idx
Engine/: Engine.pro  glwidget.cpp  glwidget.h  main.cpp
EngineProject.app/Contents/: Info.plist
EngineProject.app/Contents/MacOS/: EngineProject
Engine_classes/: Engine.cpp  Engine.h  engineCamera.h  enginecamera.cpp  gridline.h  lightsource.h  pointlightsource.cpp  pointlightsource.h  scenegraph.cpp  scenegraph.h  shader.cpp  shader.h  stb_image.h
Materials/: DielectricMaterial.cpp  DielectricMaterial.h  Dielectric_Material.h  DiffuseLight.h  DiffuseMaterial.cpp  DiffuseMaterial.h  Diffuse_Material.h  Diffuse_specular_Material.h  Material.h  Materials.h  MetalMaterial.cpp  MetalMaterial.h  Phong_metal_Material.h
Objects_classes/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BVH_Node.cpp  BVH_Node.h  Object.hpp  Objects.hpp  Objects_List.cpp  Objects_List.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h
Ray-tracing/: CMakeLists.txt  ImageRenderer.h  Ryan_Sfeila.md  Utilities.hpp  main.hpp  shader.h
Textures/: brick-texture.html  red.html  sun.html
build-Ray-tracing-Qt_6_6_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Ray-tracing-Qt_6_6_0_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-73d9ebc90c412616a41f.json  cmakeFiles-v1-b484b865085b8a1a9c08.json  cmakeFiles-v1-fac86b7f2e93e7380457.json  codemodel-v2-c075fe3c310da564c996.json  directory-.-Debug-1d64b575b2b1e9f155e9.json  index-2023-11-22T15-29-48-0105.json  index-2023-11-22T15-39-44-0537.json  target-Ray-tracing-Debug-a15fe6c3fde8793ebc97.json  target-Ray-tracing_autogen-Debug-8a0054d633c8f4c8371f.json
build-Ray-tracing-Qt_6_6_0_for_macOS-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-a90f095eab1311babc74.json  directory-.-Debug-9e2fd4cbccef6f3beb24.json  index-2023-11-22T15-29-27-0740.json  target-Ray-tracing-Debug-18f93787e8323cb9c5a4.json  target-Ray-tracing_autogen_timestamp_deps-Debug-85085952c441cac87b38.json
build-Ray-tracing-Qt_6_6_0_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-Ray-tracing-Qt_6_6_0_for_macOS-Debug/Ray-tracing.app/Contents/: Info.plist
build-Ray-tracing-Qt_6_6_0_for_macOS-Debug/Ray-tracing.app/Contents/MacOS/: Ray-tracing
build-Ray-tracing-Qt_6_6_0_for_macOS-Debug/Ray-tracing_autogen/: deps
build-Ray-tracing-Qt_6_6_0_for_macOS-Debug/Ray-tracing_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
imgui/docs/: FAQ.md  FONTS.md  README.md
objects/: .axis.obj.swp
shaders/: fragmentshader.shader  fragmentshaderAx.shader  fragmentshaderLine.shader  rayFragment.shader  rayVertex.shader  vertexshaderLine.shader
weekly_reports/: Akira BGS  Aleksandr_Storozhenko.md  Anca_Sfia.md  David_Kraus.md  Luka_Barovic.md  Marcel_Chwialkowski.md  Ryan_Sfeila.md  Semen_Dolgoborodov.md  Tudor_Ivan.md  ena_stefic.md
